--- a/web_static/styles/3.common.css
+++ b/web_static/styles/3.common.css
@@ -1,8 +1,7 @@
-body{                                                
+.header{                                     
                                                              
-          margin: 0;                                        
-         padding:0;                                          
+        color: #FF0000;                                      
+         height: 60px;                                       
          width: 100%;                                        
-        height: 100;                                         
-                                                             
-        }
+         background:blue;                                    
+        } 
