--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,5 +1,5 @@
 
-.footer{                                             
+footer{                                             
                                                              
         color: #00FF00;                                      
          height: 60px;                                       
