--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,4 +1,4 @@
-.footer{                                             
+footer{                                             
                                                              
         color: #00FF00;                                      
          height: 60px;                                       
